# opencl-miner

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  beamStratum.cpp  beamStratum.h  beamUtil.h  clHost.cpp  clHost.h  equihash_150_5.cl  equihash_150_5.inc  equihash_150_5_3G.cl  main.cpp  makefile  preBuild_Linux.tar.xz  readme.md
beam/core/: difficulty.cpp  difficulty.h
beam/utility/: common.cpp
clHeaders/CL/: cl.hpp
clHost/: CMakeLists.txt  clHost.cpp  clHost.h
crypto/: blake2b.cpp  blake2b.h
kernels/: beamHash.cl  beamHash.h  equihash_150_5.cl  equihash_150_5_inc.h
solvers/: CMakeLists.txt  beamHashIII_solver.cpp  beamHash_III_solver.cpp  beamHash_II_solver.cpp  beamSolvers.h
solvers/kernels/: beam_hash_II.h  beam_hash_III.cl  beam_hash_III.h
stratum/: CMakeLists.txt  beamStratum.cpp  beamStratum.h
